welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:-6: error: Missing closing brace `}' assumed here
try {
^loneTeen:1: error: expected class or object definition
def isTeen(age:Int){
^loneTeen:5: error: expected class or object definition
def loneTeen(a:Int, b:Int):Boolean = {
^